--- a/dancefloor.html
+++ b/dancefloor.html
@@ -8,15 +8,14 @@
     <script src="src/blinkyDancer.js"></script>
     <script src="src/popDancer.js"></script>
     <script src="src/bouncyDancer.js"></script>
-    <script src="src/lineupDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="popDancer">add a pop dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="bouncyDancer">add a bouncy dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="lineupDancer">lineup dancers</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makePopDancer">add a pop dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBouncyDancer">add a bouncy dancer</a>
+      <a href="#" class="lineupButton" data-dancer-maker-function-name="lineupDancer">lineup dancers</a></div>
     <script src="src/init.js"></script>
   </body>
 </html>
